--- a/ai-backend/requirements.txt
+++ b/ai-backend/requirements.txt
@@ -1,11 +1,22 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-torch==2.1.0
-torchvision==0.16.0
-Pillow==10.1.0
-numpy==1.24.3
-opencv-python-headless==4.8.1.78
-PyYAML==6.0.1
-requests==2.31.0
-ultralytics
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+numpy>=1.24.0
+gitpython>=3.1.30            # Git repo interaction for training/versioning
+matplotlib>=3.5.0            # Plotting results and graphs
+numpy>=1.23.5                # Fundamental for array/matrix operations
+opencv-python>=4.1.1         # Image/video processing
+Pillow>=10.3.0               # Image reading/writing support
+psutil>=5.9.0                # System monitoring (RAM, CPU, etc.)
+PyYAML>=5.3.1                # Reading configs (yaml files)
+requests>=2.32.2             # HTTP requests, used in model hub/downloads
+scipy>=1.4.1                 # Scientific computing (e.g. IoU, metrics)
+thop>=0.1.1                  # Model profiling - FLOPs and parameter count
+tqdm>=4.66.3                 # Progress bar in CLI
+ultralytics>=8.2.64          # YOLO framework library (models, training, utils)
+pandas>=1.1.4                # Data handling and manipulation
+seaborn>=0.11.0              # Statistical data visualization (confusion matrix, etc.)
+setuptools>=70.0.0           
+
+
+
