--- a/ui-backend/requirements.txt
+++ b/ui-backend/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.3.0
+Flask==3.0.0
+Werkzeug==3.0.1
 requests==2.31.0
-Pillow==10.0.0
-werkzeug==2.3.0
+python-multipart==0.0.6
+Pillow==10.1.0
